2007-01-10 zunda <zunda at freeshell.org>
	* amazon.rb and category.rb: stop HTML-escaping URL-escaped
	strings. Excuse me, this was too much.

2007-01-11 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: support ISBN-13 (only starts with 978, maybe).

2007-01-10 zunda <zunda at freeshell.org>
	* counter.rb: modified to escape theme_url and values for
	inputs and text areas

2007-01-10 zunda <zunda at freeshell.org>
	* category.rb: modified to escape category names in sub
	titles (as is done in the other place) and URL-escape
	category names in URLs. We might still have to take care
	of charactor codes before URL-escaping category names.

2007-01-10 zunda <zunda at freeshell.org>
	* calendar3.rb: modified to escape title attributes of pop-ups

2007-01-11  Kazuhiko  <kazuhiko@fdiary.net>
	* title_list.rb: remove escape of *_to_html() results.

	* kw.rb: url_encode key instead of html_escape. add '-m0' option
	to nkf().

	* xmlrpc/xmlrpc.rb: use nkf instead of uconv.

2007-01-10  Kazuhiko  <kazuhiko@fdiary.net>
	* xmlrpc/xmlrpc.rb: support recent tDiary.

2007-01-10 zunda <zunda at freeshell.org>
	* navi_user.rb: fixed bug introduced with previous commit: should
	have userd navi_latest for link to latest view

2007-01-10 zunda <zunda at freeshell.org>
	* amazon.rb: modified to escape pos, which can be typed
	by the user, and URL-escape asin and amazon.imgsize.

2007-01-10 zunda <zunda at freeshell.org>
	* a.rb: modified to URL-escape syntheized part of URL independent of
	charset, use h() insted of CGI.escapeHTML(), and HTML-escape data
	inside textarea

2007-01-10 TADA Tadashi <sho@spc.gr.jp>
	* src.rb: modified to use ERB::Util.h instead of CGI::escpaeHTML.
	* todo .rb: modified to use ERB::Util.h instead of CGI::escpaeHTML and escape base-html
	* tb-show.rbm pb-show.rb: rewind some over escapes.

2007-01-09 zunda <zunda at freeshell.org>
	* navi_user.rb: modified to work on secure mode

2007-01-10  Kazuhiko  <kazuhiko@fdiary.net>